@@ -1,13 +1,14 @@
 package com.fz.filmFinder.filmFinder.service;
 
+import lombok.extern.slf4j.Slf4j;
 import org.jsoup.nodes.Document;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 @Service
+@Slf4j
 public class FinderApiService {
 
     private final FindMovieMapService findMovieMapService;
@@ -25,16 +26,18 @@ public class FinderApiService {
 
     public List<String> getMoviesList(String movieName) throws RuntimeException {
         // Get the HTML document for the given movie name
-        Optional<Document> html = findMovieMapService.getMoviesHtml(movieName);
+
 
         try {
+            Optional<Document> html = findMovieMapService.getMoviesHtml(movieName);
             // Check if the HTML document is present
             if (html.isPresent()) {
                 // Extract the list of movies from the HTML document
                 return findMovieMapService.moviesList(html);
             } else {
                 // If HTML document is not present, return an empty list
-                return Arrays.asList("No movies found for the given movie name.");
+                log.error("no same movie find or we have a error");
+                return List.of("No movies found for the given movie name.");
             }
         } catch (Exception e) {
             // Throw a custom exception if any error occurs during the process
